--- a/progrm 1 .html
+++ b/progrm 1 .html
@@ -45,7 +45,7 @@
         margin-bottom: 15px;
     }
     button {
-        background-color: #4CAF50;
+        background-color: #691ff3;
         color: white;
         padding: 12px 20px;
         border: none;
